java 8.  Boolean support.  randomCollection.  Choose n elements from set.  bug fix for custom setter values.  specifying constructor params now actually works.